--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 		<div class="introduction">
 			<p>This is a webapp for a team of Web developers.</p>
+                <div class="check"> <h2>My trial</h2>
 		</div>
 
 	</body>
